Crash making a linked object group local #29459

Closed
opened 2011-11-29 23:41:33 +01:00 by Georg K · 4 comments

%%%Found in blender-2.61beta and r42250 (not crashing in 2.60a)

In the attached file CrashingFile.blend, right-click the library "Group" in the Outliner, select "make local" and you get a segfault
Backtrace:
0 is_dupid library.c 1111 0x08fb5d55
1 check_for_dupid library.c 1148 0x08fb5e16
2 new_id library.c 1262 0x08fb61b0
3 id_clear_lib_data library.c 1285 0x08fb625b
4 id_local_cb outliner_tools.c 313 0x08b6dbf1
5 outliner_do_libdata_operation outliner_tools.c 260 0x08b6d9a2
6 outliner_do_libdata_operation outliner_tools.c 264 0x08b6d9fc
7 outliner_do_libdata_operation outliner_tools.c 264 0x08b6d9fc
8 outliner_group_operation_exec outliner_tools.c 662 0x08b6e8a1
9 wm_operator_invoke wm_event_system.c 751 0x08ac2f54
10 wm_operator_call_internal wm_event_system.c 899 0x08ac3423
11 WM_operator_name_call wm_event_system.c 948 0x08ac35e6
12 ui_apply_but_funcs_after interface_handlers.c 396 0x08caeb53
13 ui_handler_popup interface_handlers.c 6622 0x08cc0199
14 wm_handler_ui_call wm_event_system.c 361 0x08ac1f77
15 wm_handlers_do wm_event_system.c 1564 0x08ac49e8
16 wm_event_do_handlers wm_event_system.c 1865 0x08ac555a
17 WM_main wm.c 366 0x08abf7e0
18 main creator.c 1260 0x08abeda9

Perhaps this has something to do with http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=41329

Using "Object - "Make Local" - "All" from the 3D View does work well for linked groups and objects, no crashes there.

When I link an object instead of a group, I can't make it local from the Outliner but I have to choose "Object" - "Make local" - "Selected Objects" but then it still can't be edited ("Make Local" - "All" would have had the desired effect), so I click on "Make local" in the right-click menu of the Outliner and this time it reacts, but crashes just like with the group.

I don't know if this would be a separate bug or if it counts as a bug at all, but Undo does not work if you do this: In the example file select the cube and in the 3DView select "Object" - "Make Local" - "All", now your group is local. But if you want to go back using Ctrl-Z, it does not work, the group will disappear and only the empty remains. When I am using "Make Local" - "All" on a linked object and press Ctrl-Z, object and empty both disappear.%%%

%%%Found in blender-2.61beta and r42250 (not crashing in 2.60a) In the attached file CrashingFile.blend, right-click the library "Group" in the Outliner, select "make local" and you get a segfault Backtrace: 0 is_dupid library.c 1111 0x08fb5d55 1 check_for_dupid library.c 1148 0x08fb5e16 2 new_id library.c 1262 0x08fb61b0 3 id_clear_lib_data library.c 1285 0x08fb625b 4 id_local_cb outliner_tools.c 313 0x08b6dbf1 5 outliner_do_libdata_operation outliner_tools.c 260 0x08b6d9a2 6 outliner_do_libdata_operation outliner_tools.c 264 0x08b6d9fc 7 outliner_do_libdata_operation outliner_tools.c 264 0x08b6d9fc 8 outliner_group_operation_exec outliner_tools.c 662 0x08b6e8a1 9 wm_operator_invoke wm_event_system.c 751 0x08ac2f54 10 wm_operator_call_internal wm_event_system.c 899 0x08ac3423 11 WM_operator_name_call wm_event_system.c 948 0x08ac35e6 12 ui_apply_but_funcs_after interface_handlers.c 396 0x08caeb53 13 ui_handler_popup interface_handlers.c 6622 0x08cc0199 14 wm_handler_ui_call wm_event_system.c 361 0x08ac1f77 15 wm_handlers_do wm_event_system.c 1564 0x08ac49e8 16 wm_event_do_handlers wm_event_system.c 1865 0x08ac555a 17 WM_main wm.c 366 0x08abf7e0 18 main creator.c 1260 0x08abeda9 Perhaps this has something to do with http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=41329 Using "Object - "Make Local" - "All" from the 3D View does work well for linked groups and objects, no crashes there. When I link an object instead of a group, I can't make it local from the Outliner but I have to choose "Object" - "Make local" - "Selected Objects" but then it still can't be edited ("Make Local" - "All" would have had the desired effect), so I click on "Make local" in the right-click menu of the Outliner and this time it reacts, but crashes just like with the group. I don't know if this would be a separate bug or if it counts as a bug at all, but Undo does not work if you do this: In the example file select the cube and in the 3DView select "Object" - "Make Local" - "All", now your group is local. But if you want to go back using Ctrl-Z, it does not work, the group will disappear and only the empty remains. When I am using "Make Local" - "All" on a linked object and press Ctrl-Z, object and empty both disappear.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r42278.%%%

%%%fixed r42278.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks Campbell, what about the Ctrl-Z problem, is this a todo ?%%%

%%%Thanks Campbell, what about the Ctrl-Z problem, is this a todo ?%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29459
No description provided.