fix [#29459] Crash making a linked object group local

was an error with make-local refactor & path updating.