source/blender/blenkernel/intern/mesh.c
@@ -298,17 +298,17 @@ void make_local_mesh(Mesh *me)
 		expand_local_mesh(me);
 	}
 	else if(is_local && is_lib) {
-		Mesh *men= copy_mesh(me);
-		men->id.us= 0;
+		Mesh *me_new= copy_mesh(me);
+		me_new->id.us= 0;
 
 
 		/* Remap paths of new ID using old library as base. */
-		BKE_id_lib_local_paths(bmain, &men->id);
+		BKE_id_lib_local_paths(bmain, me->id.lib, &me_new->id);
 
 		for(ob= bmain->object.first; ob; ob= ob->id.next) {
 			if(me == ob->data) {
 				if(ob->id.lib==NULL) {
-					set_mesh(ob, men);
+					set_mesh(ob, me_new);
 				}
 			}
 		}
